<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.marvel_hub.ui.search.viewModel.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:padding="@dimen/large_padding">

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bar_background"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search_hint"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:onTextChange="@{viewModel}" />

        <HorizontalScrollView
            android:id="@+id/view_chips_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/search_bar">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filter_chip_component"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_padding"
                android:paddingBottom="@dimen/medium_padding"
                app:checkedChip="@id/chip_comics"
                app:layout_constraintTop_toBottomOf="@+id/search_bar"
                app:singleSelection="true">


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_comics"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onClickComicChip()}"
                    android:text="@string/comics" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_creators"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onClickCreatorChip()}"
                    android:text="@string/creators" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_character"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/chip_characters" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_events"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onClickEventChip()}"
                    android:text="@string/text_events" />


            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recycler_search_result"
            style="@style/RecyclerStyleSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_chips_group"
            app:layout_constraintVertical_bias="0.37"
            app:recyclerItems="@{viewModel.searchResult.toData().data.results}"

            tools:listitem="@layout/item_search_comics" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showWhenLoading="@{viewModel.itemList}" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/view_lottie_layer"
            android:layout_width="@dimen/lotti_width"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/search_empty"
            app:showWhenEmpty="@{viewModel.itemList}" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>